syntax = "proto3";

// https://github.com/protocolbuffers/protobuf/releases/tag/v26.1
// https://github.com/protocolbuffers/protobuf/releases/download/v26.1/protoc-26.1-linux-x86_64.zip
// c:\bin\protoc-26.1-linux-x86_64\bin\protoc
// export PATH=${PATH}:/mnt/c/bin/protoc-26.1-linux-x86_64/bin:${HOME}/go/bin
// pushd sandbox/week07/grpc_1/
// go get -u github.com/golang/protobuf/{proto,protoc-gen-go}
// go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
// protoc --go-grpc_out=. *.proto # protoc --go_out=plugins=grpc:. *.proto
// protoc --go_out=. --go-grpc_out=. *.proto

package grpc_1;
option go_package = "../grpc_1";

message SessionID {
  string ID = 1;
}

message Session {
  string login = 1;
  string useragent = 2;
}

message Nothing {
  bool dummy = 1;
}

// grpc-сервис проверки авторизации
service AuthChecker {
    rpc Create (Session) returns (SessionID) {}
    rpc Check (SessionID) returns (Session) {}
    rpc Delete (SessionID) returns (Nothing) {}
}
