syntax = "proto3";

// export PATH=${PATH}:/mnt/c/bin/protoc-26.1-linux-x86_64/bin:${HOME}/go/bin
// pushd sandbox/week07/grpc_4_balanced
// protoc --go_out=. --go-grpc_out=. *.proto

package grpc_4_balanced;
option go_package = "../grpc_4_balanced";

message SessionID {
  string ID = 1;
}

message Session {
  string login = 1;
  string useragent = 2;
}

message Nothing {
  bool dummy = 1;
}

// grpc-сервис проверки авторизации
service AuthChecker {
    rpc Create (Session) returns (SessionID) {}
    rpc Check (SessionID) returns (Session) {}
    rpc Delete (SessionID) returns (Nothing) {}
}
